<?xml version="1.0"?>
<package format="3">
  <name>rflex</name>
  <version>0.1.0</version>
  <description>ROS adaptations of the RFLEX driver.</description>
  <license>GPL</license>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>angles</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>